# rpa_cadastro_de_produtos

./: .gitignore  README.md  automacao.py  config.json  config.py  main.py  produtos.csv  pyproject.toml  rpa-cadastro-de-produtos.spec
Entrada/: produtos_atualizado.csv
Processados/: progresso.json
src/: bot.py  config.py  main.py
