[project]
name = "rpa-cadastro-no-sistema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.20.0",
    "rich>=15.0.0",
    "streamlit>=1.57.0",
]
